# custom-poling

./: .gitignore  Example_1_multimode_squeezed_states.ipynb  Phys. Rev. A 106, 043714 - Tunable frequency-bin multimode squeezed vacuum states of light.ipynb  README.md  Tunable frequency-bin multi-mode squeezed states of light.ipynb  Tutorial 1 - The crystal object.ipynb  Tutorial 2 - The target function.ipynb  Tutorial 3 - Customizing a crystal.ipynb  Tutorial_1_the_crystal_object.ipynb  Tutorial_2_frequency_PMF.ipynb  Tutorial_4_customizing_a_crystal.ipynb  Untitled.ipynb  arXiv 2204.10079 - Tunable frequency-bin multi-mode squeezed states of light.ipynb  pyproject.toml  requirements.txt  setup.py
.ipynb_checkpoints/: Tutorial 1 - The crystal object-checkpoint.ipynb  Tutorial 1b-checkpoint.ipynb  Tutorial 3 - Customizing a crystal-checkpoint.ipynb  Tutorial_1_c-checkpoint.ipynb  Tutorial_2_frequency_PMF-checkpoint.ipynb  Tutorial_4_customizing_a_crystal-checkpoint.ipynb  sandbox-checkpoint.ipynb
custom_poling/core/: crystal.py  custom_crystal.py  target.py
custom_poling/utils/: amplitude_function.py  mat_func.py  phase_factor.py  pmf.py  sellmeier.py
examples/: Tutorial_1_the_crystal_object.ipynb  Tutorial_3_the_target_function.ipynb  Tutorial_4_customizing_a_crystal.ipynb  example.py
src/custom_poling/utils/: func_to_matrix.py  wavenumbers.py
tests/: test_crystal.py
